bk_ida/gccida/c0/athlon_fp_unit_ready_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:2687:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 2626, "athlon_fp_unit_ready_cost"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:2687:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 2626, "athlon_fp_unit_ready_cost"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:2981:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], SFmode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:2984:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !mult_operator( recog_data_0.operand[3], SFmode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:2999:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& mult_operator( recog_data_0.operand[3], SFmode) 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3003:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& !mult_operator( recog_data_0.operand[3], SFmode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3016:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], XFmode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3019:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !mult_operator( recog_data_0.operand[3], XFmode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3032:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], TFmode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3035:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !mult_operator( recog_data_0.operand[3], TFmode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3056:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( mult_operator( recog_data_0.operand[3], SFmode) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3079:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& mult_operator( recog_data_0.operand[3], SFmode) 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3105:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( mult_operator( recog_data_0.operand[3], DFmode) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3128:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& mult_operator( recog_data_0.operand[3], DFmode) 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3156:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( mult_operator( recog_data_0.operand[3], XFmode) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/insn-attrtab.c:3184:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( mult_operator( recog_data_0.operand[3], TFmode) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_fp_unit_ready_cost/src/obj/insn-attrtab.o] Error 1
